[gd_scene load_steps=6 format=3 uid="uid://bk2ajqqssdaty"]

[ext_resource type="Texture2D" uid="uid://2e30mgv0ky8v" path="res://zombie/zombie.png" id="1"]
[ext_resource type="Script" path="res://zombie/Zombie.gd" id="2"]
[ext_resource type="AudioStream" uid="uid://bmu01ffjlmmcv" path="res://sfx/splat.wav" id="3"]

[sub_resource type="CircleShape2D" id="1"]
radius = 16.0

[sub_resource type="CircleShape2D" id="2"]
radius = 6.0

[node name="Zombie" type="CharacterBody2D" groups=["zombie"]]
collision_layer = 3
script = ExtResource("2")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(5, 0)
texture = ExtResource("1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("1")

[node name="HitArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]
position = Vector2(16, 0)
shape = SubResource("2")

[node name="TimerTarget" type="Timer" parent="."]
autostart = true

[node name="TimerAttackReset" type="Timer" parent="."]
one_shot = true

[node name="TimerDelete" type="Timer" parent="."]
one_shot = true

[node name="Splat" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3")

[connection signal="timeout" from="TimerDelete" to="." method="queue_free"]
